feat: stats/graphs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,6 @@
     ".vscode": true,
     "node_modules": true,
     "package-lock.json": true,
-    "package.json": true,
-    "public": true
+    "package.json": true
   }
 }
